# SevenBitRest

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
Benchmarks/: Router.cpp
Cmake/: Setup.cmake
Docs/: DependencyInjection.md  Middlewares.md
Examples/HelloWorld/: Basic.cpp  SimpleRestServer.cpp
Examples/Middlewares/: AddHeaderToResponse.cpp  Basic.cpp  Default.cpp  Lambda.cpp
Examples/ServiceProvider/: Basic.cpp  FactoryFunction.cpp  Interfaces.cpp  InterfacesMultiple.cpp  Rules.cpp  Scopes.cpp  ScopesExplanation.cpp  SelfInjection.cpp
Include/: SevenBitRest.hpp
Include/Claims/: Claim.hpp  ClaimTypes.hpp  ClaimsIdentity.hpp  ClaimsPrincipal.hpp  IIdentity.hpp  IPrincipal.hpp
Include/Common/: CliVariables.hpp  ConsoleColor.hpp  EnvVariables.hpp  Exceptions.hpp  Export.hpp  Json.hpp  LibraryConfig.hpp  LibraryConfig.hpp.input  ServerSettings.hpp  Task.hpp  Utils.hpp
Include/Configuration/: AppSettingsConfigurationSource.hpp  CliConfigurationSource.hpp  ConfigurationManager.hpp  EnvConfigurationSource.hpp  FileConfigurationSource.hpp  IConfiguration.hpp  IConfigurationBuilder.hpp  IConfigurationProvider.hpp  IConfigurationRoot.hpp  IConfigurationSource.hpp  JsonConfigurationSource.hpp
Include/DI/: CircularDependencyGuard.hpp  CtorReflection.hpp  Exceptions.hpp  IServiceHolder.hpp  ServiceList.hpp  ServiceOwner.hpp  ServiceProvider.hpp  ServiceScope.hpp  ServicesContainer.hpp
Include/Data/: DataContainer.hpp  IData.hpp  IDataContainer.hpp
Include/Engine/: Action.hpp  BaseParam.hpp  EngineDependencies.hpp  EnvironmentBuilder.hpp  FromBody.hpp  FromHeader.hpp  FromQuery.hpp  FromRoute.hpp  FromServices.hpp  FromServicesAll.hpp  IContext.hpp  IEndpoint.hpp  IRoutingData.hpp  IWebApplicationEngine.hpp  Macros.hpp  WebApplication.hpp  WebApplicationBuilder.hpp  WebApplicationOptions.hpp
Include/Http/: CommonHeadders.hpp  HttpMethod.hpp  ICookiesView.hpp  IHeadders.hpp  IHeaddersView.hpp  IParams.hpp  IParamsView.hpp  IQueryParamsView.hpp  IRequest.hpp  IResponse.hpp  IResult.hpp  IRouteParams.hpp  IRouteParamsView.hpp  Results.hpp
Include/Log/: ConsoleLogProvider.hpp  ILogProvider.hpp  ILogger.hpp  LogLevel.hpp  LogMarkers.hpp  LogProviderBase.hpp  Logger.hpp  LoggingBuilder.hpp
Include/Middlewares/: IAuthorizer.hpp  IMiddleware.hpp  IMiddlewareCreator.hpp  MiddlewareCreator.hpp  MiddlewareLambda.hpp  MiddlewareLambdaCreator.hpp  SetupMiddleware.hpp
Include/Router/: Constrains.hpp  Exceptions.hpp  IRouter.hpp  ISegmentMatcher.hpp  RouteTemplateSegments.hpp  Router.hpp  RoutingNode.hpp  (+3 more)
Source/: CMakeLists.txt  Utils.cpp  WebApplicationEngine.cpp
Source/Engine/: BoostBeastServer.hpp  BoostExtensions.hpp  CancellationSignals.hpp  CertLoader.hpp  Context.hpp  Endpoint.hpp  RoutingData.hpp  Url.hpp  WebApplicationEngine.hpp
Source/Http/: CookiesView.hpp  Headders.hpp  HeaddersView.hpp  QueryParamsView.hpp  Request.hpp  Response.hpp  RouteParams.hpp
Source/Middlewares/: EndpointsMiddleware.hpp  MiddlewareCreators.hpp  MiddlewaresRunner.hpp  RouterMiddleware.hpp
Tests/E2E/: CMakeLists.txt
Tests/Intergation/: CMakeLists.txt  RouterTest.cpp  SeriviceCollectionTest.cpp  SeriviceProviderTest.cpp
Tests/Unit/: CMakeLists.txt
(+7 files in other folders)
